# let_or_return

./: Cargo.toml  README.md
src/: lib.rs
tests/: usage.rs
tests/expand/: 01-simple_pattern_with_return.expanded.rs  01-simple_pattern_with_return.rs  02-simple_pattern_without_return.expanded.rs  02-simple_pattern_without_return.rs  03-complex_pattern_with_return.expanded.rs  03-complex_pattern_with_return.rs  04-complex_pattern_without_return.expanded.rs  04-complex_pattern_without_return.rs  05-simple_pattern_with_path.expanded.rs  05-simple_pattern_with_path.rs
